- Can't store and retrive "\nEOT\n"
- Fixed by checking for the existence of the here-doc terminator in the 
string, and if so appending more characters.

* Fixed bug #1565180
- https://sourceforge.net/tracker/index.php?func=detail&aid=1565180&group_id=6926&atid=106926
- -nocase breaks -default.
- If a default-values section is specified, then -nocase did not look it up
if it's not lowercase.

Version 2.44:  ( Thu Dec 25 11:44:07 IST 2008 )
-----------------------------------------------

* Eliminated an assignment of $VERSION into itself to "get rid of warnings".
Only caused warnings at Build.PL, and is unnecessary now that we
"use vars".

Version 2.43:  ( Thu Dec  4 18:56:02 IST 2008 )
-----------------------------------------------

* Placed IniFiles.pm under lib/Config/IniFiles.pm.

* Added a Build.PL file for the distribution.

* Moved the ChangeLog to its own file - Changes.

* Made the README contain the useful information and nothing else - previously
it was a copy of the module's entire POD.

* Added a regression test for:

https://sourceforge.net/tracker/index.php?func=detail&aid=778593&group_id=6926&atid=106926

When copying tied-hashes representing sections with multiline values as
keys, one used to get a reference instead of a copy. This was fixed in SVN
but not in CPAN.

* Added a test for opening an empty file, inspired by:

https://sourceforge.net/tracker/index.php?func=detail&aid=927111&group_id=6926&atid=106926

* Added a fix for this bug:

https://sourceforge.net/tracker/index.php?func=detail&aid=767913&group_id=6926&atid=106926

With a test that I wrote myself: in list context, ->val() returned the list
containing (undef()) if there was no such key. Now returning the empty
list which evaluates to false.

* Added a test for bug

    "[ 2030786 ] Brackets within values are treated as section headers"

It seems to be fixed on SVN.

Revision 2.40  2003/12/08 10:33:13  domq
Documentation tidyup

Revision 2.39  2003/12/06 07:54:21  wadg